Re-arrange forms layout

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -6,5 +6,5 @@
 <link rel="stylesheet" href="./static/admin/css/admin-index.css" />
 
 <script defer>
-  document.documentElement.dataset.theme = 'auto';
+  document.documentElement.dataset.theme = 'light';
 </script>
