:white_check_mark: Add story for base configuration fields
Interaction testing is a step too far given the manual state management,
but getting the visual regressions tracked and making layout editing
easier via Storybook is useful for now.

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -7,4 +7,7 @@
 
 <script defer>
   document.documentElement.dataset.theme = 'light';
+  document.addEventListener('DOMContentLoaded', () => {
+    document.body.classList.add('change-form');
+  });
 </script>
